# ClujHackathon2026

./: BETTER_AUTH_SETUP.md  CLAUDE.md  IGNORED_API_no_access.py  OAUTH_SETUP.md  OAUTH_TESTING.md  README.md  date_bunici.sql  main.py  play_audio.py  pyproject.toml  script_users.py  users.sql
.claude/: settings.local.json
backend/: .env.example  .gitignore  README.md  alembic.ini  migrate.py  pyproject.toml  render.yaml  run_migrations.py  start.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_2fa_oauth.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  better_auth.py  calls.py  dashboard.py  medications.py  oauth.py  payments.py  pricing.py  reviews.py  seniors.py  subscriptions.py  two_factor.py  users.py
backend/app/core/: config.py  database.py  oauth.py  security.py  two_factor.py
backend/app/models/: __init__.py  call.py  medication.py  payment.py  pricing.py  review.py  senior.py  subscription.py  user.py
backend/app/schemas/: auth.py  call.py  dashboard.py  medication.py  payment.py  pricing.py  review.py  senior.py  subscription.py  user.py
backend/migrations/: 001_add_2fa_oauth.sql
frontend/: .env  .gitignore  BETTER_AUTH_FRONTEND.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ProtectedRoute.jsx
frontend/src/data/: dashboardMock.js
frontend/src/lib/: api.js  auth.js  better-auth.js  format.js  ledger.js  medications.js  theme.js  (+4 more)
not_matter/: gemini_live.py  pyproject.toml
not_matter/frontend/: package-lock.json
(+88 files in other folders)
