[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "google-auth>=2.38.0",
    "greenlet>=3.5.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]
